# pbr-lecture-2020

./: CMakeLists.txt  LICENSE  README.md
ref/: CMakeLists.txt  cornell-box.cpp  cornell-box2.cpp  pt-importance.cpp  pt.cpp  rtao.cpp  spheres.cpp
ref/src/: bsdf.h  camera.h  constant.h  image.h  integrator.h  intersect-info.h  light.h  pinhole-camera.h  primitive.h  ray.h  renderer.h  rng.h  sampling.h  scene.h  shape.h  sphere.h  vec3.h
